Commit popup permission location

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,7 @@
 {
-      "app_name": "Weather"
+      "app_name": "Weather",
+      "title_dialog_location" : "Location",
+      "description_dialog_location" : "Allow maps to access your\nlocation while you use the app?",
+      "text_allow" : "Allow",
+      "text_skip" : "Skip for now"
 }
